_site/force-app/main/default/objects/Notification_Log__c/Notification_Log__c.object-meta.xml
<CustomObject>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>NOTIF-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>