_site/force-app/main/default/objects/Notification_Log__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <label>Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>