_site/force-app/main/default/objects/Notification_Log__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status Update</fullName>
            </value>
            <value>
                <fullName>Payment Reminder</fullName>
            </value>
            <value>
                <fullName>Appointment Reminder</fullName>
            </value>
            <value>
                <fullName>Renewal Outreach</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>