_site/force-app/main/default/objects/Notification_Log__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport Application</label>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>