_site/force-app/main/default/objects/Notification_Log__c/fields/Provider_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Provider Message Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>